      [Tomaz Muraus]

    - Add tests for networking functionality in the OpenStack and Rackspace
      driver.
      [Tomaz Muraus]

    - Allow user to pass all supported extension arguments to ex_rebuild_server
      method in the OpenStack driver. (LIBCLOUD-408)
      [Dave King]

    - Add pricing information for Rackspace Cloud Sydney region.
      [Tomaz Muraus]

  *) Storage

    - Deprecate CLOUDFILES_US and CLOUDFILES_UK storage provider constant and
      add a new CLOUDFILES constant.
      Driver referenced by this new constant takes a "region" keyword argument
      which can be one of 'ord', 'dfw', 'iad', 'syd', 'lon'.

      Note: Deprecated constants will continue to work for the foreseeable
      future.
      [Tomaz Muraus]

    - Allow users to filter objects starting with a prefix by passing ex_prefix
      argument to the list_container_objects method in the S3, Google Storage
      and CloudFiles driver. (LIBCLOUD-369)
      [Stefan Friesel]

    - Fix an issue with mutating connectionCls.host attribute in the Azure
      driver. This bug prevented user from having multiple Azure drivers with
      different keys instantiated at the same time. (LIBCLOUD-399)
      [Olivier Grisel]

 *) Load Balancer

    - Add new driver for Google Compute Engine (LIBCLOUD-386)
      [Rick Wright]

 *) DNS

   - Use string instead of integer for RecordType ENUM value.
     Note: If you directly use an integer instead of RecordType ENUM class you
     need to update your code to use the RecordType ENUM otherwise the code
     won't work.
     [Tomaz Muraus]

   - Add method "export_zone_to_bind_format" which allows users to export
     Libcloud Zone to BIND zone format. (LIBCLOUD-398)
     [Tomaz Muraus]

Changes with Apache Libcloud 0.13.2

  *) General

    - Don't sent Content-Length: 0 header with POST and PUT request if "raw"
      mode is used. This fixes a regression which could cause broken behavior